# github_mvp

./: .gitignore.swp  .main.py.swp  .main.py.un~  README.md  main.py  main.py~  setup.cfg  setup.py
.github/workflows/: .learn-github-actions.yml.swp  .learn-github-actions.yml.un~  learn-github-actions.yml  learn-github-actions.yml~
docs/: conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  first_chapter.doctree  index.doctree
docs/_build/html/: .buildinfo  first_chapter.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: first_chapter.rst.txt
