[metadata]
name = example-pkg-max_mustermann_1337
version = 0.0.1
url = h
author = Max Mustermann
author_email = maxmustermann@example.com
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
description = An example package to get a better understanding of packaging
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6